--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.3.0
-  nostr: ^1.3.0
+  nostr: 1.3.0
   web_socket_channel: ^2.3.0
   logger: ^1.1.0
 
